--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build and Test
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "beta"]
   workflow_call:
     secrets:
       DOCKER_USERNAME:
@@ -80,3 +80,39 @@ jobs:
         run: yarn prepack
       - name: Test postpack
         run: yarn postpack
+
+  deploy:
+    name: Release package
+    runs-on: ubuntu-latest
+    needs: [test]
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/beta')
+    steps:
+      - uses: actions/checkout@v2.x
+        with:
+          ref: ${{ github.ref }}
+          persist-credentials: false # GITHUB_TOKEN must not be set for the semantic release
+      - uses: actions/setup-node@v2.x
+        with:
+          node-version: 14.17.6
+      - uses: actions/cache@v2.x
+        with:
+          path: "**/node_modules"
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
+      - name: Get Semantic Release current version
+        id: semantic_version
+        run: |
+          VERSION=`node -p "require('./package.json').devDependencies['semantic-release']"`
+          echo "::set-output name=version::$VERSION"
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@767cc0b0cd610ffb1ffee1b36a9b39120adc5f80
+        id: semantic
+        with:
+          semantic_version: ${{ steps.semantic_version.outputs.version }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GIT_AUTHOR_EMAIL: ${{ secrets.GIT_AUTHOR_EMAIL }}
+          GIT_AUTHOR_NAME: ${{ secrets.GIT_AUTHOR_NAME }}
+          GIT_COMMITTER_EMAIL: ${{ secrets.GIT_COMMITTER_EMAIL }}
+          GIT_COMMITTER_NAME: ${{ secrets.GIT_COMMITTER_NAME }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
