--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,14 +4,16 @@ on:
   push:
     branches: ["main", "beta"]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
-      - name: Cancel previous running workflows
-        uses: fkirc/skip-duplicate-actions@9da67cec51d21092667038f0f4fda73099a3a451
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
@@ -19,21 +21,17 @@ jobs:
         with:
           node-version: 14.17.6
           cache: 'yarn'
-
       - name: Cache node_modules
         uses: actions/cache@v3
         id: cache-primes
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
-
       - name: Install dependencies
         if: steps.cache-primes.outputs.cache-hit != 'true'
         run: yarn install --frozen-lockfile --non-interactive --production=false
-
       - name: Lint commit message
-        uses: wagoid/commitlint-github-action@296247dfa6a133767fe0d64d08fb66326047b680
-
+        uses: wagoid/commitlint-github-action@456526eec71276a59e74aafdfe06a9632ac2eee1
       - name: Lint javascript and typescript
         run: yarn lint
 
@@ -42,20 +40,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: [lint]
     steps:
-      - name: Cancel previous running workflows
-        uses: fkirc/skip-duplicate-actions@master
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 14.17.6
           cache: 'yarn'
-
       - name: Cache node_modules
         uses: actions/cache@v3
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
-
       - name: Build
         run: yarn build
 
@@ -76,34 +70,27 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           cache: 'yarn'
-
       - name: Cache node_modules
         uses: actions/cache@v3
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
-
       - name: Login on dockerhub
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-
       - name: Start docker container
         run: docker-compose up -d; sleep 15
-
       - name: Test with Node ${{ matrix.node }}
         if: ${{ !matrix.withCoverage }}
         run: yarn test
-
       - name: Test with Node ${{ matrix.node }} & Send coverage
-        uses: paambaati/codeclimate-action@84cea27117a473d605400ca3a97fcef7e433e2d6
+        uses: paambaati/codeclimate-action@5f637ccd517bc8960de0fe59379dd922bcba9486
         if: matrix.withCoverage && matrix.node == 14
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
           coverageCommand: yarn test:coverage
-
       - name: Test prepack
         run: yarn prepack
-
       - name: Test postpack
         run: yarn postpack
 
@@ -122,21 +109,17 @@ jobs:
         with:
           node-version: 14.17.6
           cache: 'yarn'
-
       - uses: actions/cache@v3
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
-
       - name: Build
         run: yarn build
-
       - name: Get Semantic Release current version
         id: semantic_version
         run: |
           VERSION=`node -p "require('./package.json').devDependencies['semantic-release']"`
-          echo "::set-output name=version::$VERSION"
-
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@7f0c0e4904fb36f980686dda081f2f258500f3ea
         id: semantic
