--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v3
         with:
-          node-version: 14.17.6
+          node-version: 14.21.2
           cache: 'yarn'
       - name: Cache node_modules
         uses: actions/cache@v3
@@ -43,7 +43,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 14.17.6
+          node-version: 14.21.2
           cache: 'yarn'
       - name: Cache node_modules
         uses: actions/cache@v3
@@ -60,7 +60,7 @@ jobs:
     needs: [lint]
     strategy:
       matrix:
-        node: [10, 14, 16]
+        node: [14, 16, 18, 20]
         include:
           - node: 14
             withCoverage: ${{ true }}
@@ -107,7 +107,7 @@ jobs:
           persist-credentials: false # GITHUB_TOKEN must not be set for the semantic release
       - uses: actions/setup-node@v3
         with:
-          node-version: 14.17.6
+          node-version: 14.21.2
           cache: 'yarn'
       - uses: actions/cache@v3
         with:
