--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "bugs": "https://github.com/ForestAdmin/toolbelt/issues",
   "dependencies": {
     "@forestadmin/context": "1.37.1",
+    "@forestadmin/datasource-sql": "1.6.4",
     "@oclif/command": "1.5.4",
     "@oclif/config": "1.8.8",
     "@oclif/core": "2.8.5",
