--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "validate-npm-package-name": "3.0.0"
   },
   "devDependencies": {
+    "oclif": "4.4.2",
     "@commitlint/cli": "17.4.2",
     "@commitlint/config-conventional": "17.4.2",
     "@semantic-release/changelog": "6.0.1",
