--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
     needs: [lint]
     strategy:
       matrix:
-        node: [18]
+        node: [18, 20, 22]
         include:
           - node: 18
             withCoverage: ${{ true }}
