--- a/package.json
+++ b/package.json
@@ -17,13 +17,10 @@
   "dependencies": {
     "@forestadmin/context": "1.37.1",
     "@forestadmin/datasource-sql": "1.6.4",
-    "@oclif/command": "1.5.4",
-    "@oclif/config": "1.8.8",
-    "@oclif/core": "2.8.5",
-    "@oclif/errors": "1.2.2",
-    "@oclif/plugin-help": "2.1.3",
-    "@oclif/plugin-not-found": "1.2.4",
-    "@oclif/plugin-warn-if-update-available": "1.7.0",
+    "@oclif/core": "3.18.2",
+    "@oclif/plugin-help": "6.0.12",
+    "@oclif/plugin-not-found": "3.0.10",
+    "@oclif/plugin-warn-if-update-available": "3.0.10",
     "app-root-path": "3.0.0",
     "atob": "2.1.2",
     "bluebird": "3.5.2",
@@ -59,9 +56,9 @@
     "validate-npm-package-name": "3.0.0"
   },
   "devDependencies": {
+    "oclif": "4.4.2",
     "@commitlint/cli": "17.4.2",
     "@commitlint/config-conventional": "17.4.2",
-    "@oclif/dev-cli": "1.22.2",
     "@semantic-release/changelog": "6.0.1",
     "@semantic-release/git": "10.0.1",
     "@swc/core": "1.3.34",
@@ -93,7 +90,7 @@
     "typescript": "^4.5.4"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   },
   "files": [
     "/bin",
@@ -130,7 +127,7 @@
   "scripts": {
     "lint": "eslint src test",
     "prepare": "husky install",
-    "prepack": "oclif-dev manifest",
+    "prepack": "yarn build && oclif manifest && oclif readme",
     "postpack": "rm -f oclif.manifest.json",
     "build": "tsc",
     "build:watch": "tsc-watch --onSuccess 'yarn postbuild'",
