--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,9 +79,12 @@ jobs:
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Start docker container
         run: docker-compose up -d; sleep 15
+      - name: Ignore engines
+        if: matrix.node == 16
+        run: yarn config set ignore-engines true
       - name: Test with Node ${{ matrix.node }}
         if: ${{ !matrix.withCoverage }}
-        run: yarn --ignore-engines test
+        run: yarn test
       - name: Test with Node ${{ matrix.node }} & Send coverage
         uses: paambaati/codeclimate-action@5f637ccd517bc8960de0fe59379dd922bcba9486
         if: matrix.withCoverage && matrix.node == 18
@@ -90,9 +93,9 @@ jobs:
         with:
           coverageCommand: yarn test:coverage
       - name: Test prepack
-        run: yarn --ignore-engines prepack
+        run: yarn prepack
       - name: Test postpack
-        run: yarn --ignore-engines postpack
+        run: yarn postpack
 
   deploy:
     name: Release package
