--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@forestadmin/context": "1.37.1",
     "@forestadmin/datasource-sql": "1.6.4",
+    "@hapi/joi": "17.1.1",
     "@oclif/core": "3.18.2",
     "@oclif/plugin-help": "6.0.12",
     "@oclif/plugin-not-found": "3.0.10",
@@ -31,7 +32,6 @@
     "dotenv": "8.2.0",
     "handlebars": "4.7.7",
     "inquirer": "6.2.0",
-    "joi": "14.3.1",
     "json-diff": "1.0.0",
     "jsonapi-serializer": "3.6.2",
     "jsonwebtoken": "8.5.1",
@@ -56,7 +56,6 @@
     "validate-npm-package-name": "3.0.0"
   },
   "devDependencies": {
-    "oclif": "4.4.2",
     "@commitlint/cli": "17.4.2",
     "@commitlint/config-conventional": "17.4.2",
     "@semantic-release/changelog": "6.0.1",
@@ -82,6 +81,7 @@
     "lint-staged": "12.3.7",
     "mock-stdin": "1.0.0",
     "nock": "13.5.0",
+    "oclif": "4.4.2",
     "prettier": "2.8.3",
     "rimraf": "3.0.2",
     "semantic-release": "19.0.3",
