--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,7 +78,7 @@ jobs:
       - name: Login on dockerhub
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Start docker container
-        run: docker-compose up -d; sleep 15
+        run: docker compose up -d; sleep 15
       - name: Test with Node ${{ matrix.node }}
         if: ${{ !matrix.withCoverage }}
         run: yarn test
