--- a/package.json
+++ b/package.json
@@ -50,14 +50,14 @@
     "spinnies": "0.5.1",
     "stdout-stderr": "0.1.13",
     "superagent": "^10.2.3",
-    "tedious": "16.7.1",
+    "tedious": "18.6.1",
     "uuid": "8.0.0",
     "validate-npm-package-name": "3.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "17.4.2",
     "@commitlint/config-conventional": "17.4.2",
-    "@semantic-release/changelog": "6.0.1",
+    "@semantic-release/changelog": "6.0.3",
     "@semantic-release/git": "10.0.1",
     "@swc/core": "1.11.1",
     "@swc/jest": "0.2.37",
@@ -83,8 +83,8 @@
     "oclif": "4.10.11",
     "prettier": "2.8.3",
     "rimraf": "3.0.2",
-    "semantic-release": "19.0.3",
-    "semantic-release-slack-bot": "3.5.2",
+    "semantic-release": "22.0.12",
+    "semantic-release-slack-bot": "4.0.2",
     "tsc-watch": "6.0.0",
     "typescript": "^4.5.4"
   },
@@ -135,6 +135,14 @@
     "postbuild": "mkdir -p ./dist/services/dumpers/templates && cp -R src/services/dumpers/templates dist/services/dumpers/"
   },
   "resolutions": {
-    "semantic-release-slack-bot/**/micromatch": "^4.0.8"
+    "semantic-release-slack-bot/**/micromatch": "^4.0.8",
+    "@azure/core-auth": "1.8.0",
+    "@azure/core-client": "1.7.3",
+    "@azure/core-rest-pipeline": "1.18.0",
+    "@azure/core-tracing": "1.0.1",
+    "@azure/core-util": "1.11.0",
+    "@azure/identity": "4.2.1",
+    "@azure/keyvault-keys": "4.4.0",
+    "@azure/logger": "1.0.4"
   }
 }
