--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -138,3 +138,4 @@ jobs:
           GIT_COMMITTER_EMAIL: ${{ secrets.GIT_COMMITTER_EMAIL }}
           GIT_COMMITTER_NAME: ${{ secrets.GIT_COMMITTER_NAME }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          NPM_CONFIG_PROVENANCE: true
