--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
     needs: [lint]
     strategy:
       matrix:
-        node: [18, 20]
+        node: [18, 20, 22]
         include:
           - node: 18
             withCoverage: ${{ true }}
